--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "12.0.4",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
