--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.3.1",
+    "marked": "^4.0.5",
     "next": "12.0.4",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
@@ -24,6 +26,8 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/highlightjs": "^9.12.2",
+    "@types/marked": "^4.0.1",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
