--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     ]
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
+    "classnames": "^2.3.1",
     "highlight.js": "^11.3.1",
     "marked": "^4.0.5",
     "next": "12.0.4",
@@ -34,6 +34,7 @@
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
+    "gray-matter": "^4.0.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "postcss": "^8.4.1",
