--- a/package.json
+++ b/package.json
@@ -1,45 +1,55 @@
 {
-  "name": "personal-blog",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write ./**/*.ts{,x}",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "highlight.js": "^11.3.1",
-    "marked": "^4.0.5",
-    "next": "12.0.4",
-    "next-themes": "^0.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
-  },
-  "devDependencies": {
-    "@types/highlightjs": "^9.12.2",
-    "@types/marked": "^4.0.1",
-    "@types/node": "16.11.10",
-    "@types/react": "17.0.37",
-    "autoprefixer": "^10.4.2",
-    "eslint": "7",
-    "eslint-config-next": "12.0.4",
-    "eslint-config-prettier": "^8.3.0",
-    "gray-matter": "^4.0.3",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.1.2",
-    "postcss": "^8.4.8",
-    "prettier": "2.5.0",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.5.2"
-  }
+    "name": "personal-blog",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write ./**/*.ts{,x}",
+        "prepare": "husky install",
+        "graphql:codegen": "graphql-codegen —-config codegen.yml"
+    },
+    "lint-staged": {
+        "*.{ts,tsx}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
+    },
+    "dependencies": {
+        "@apollo/client": "^3.5.10",
+        "@graphql-codegen/introspection": "^2.1.1",
+        "classnames": "^2.3.1",
+        "dayjs": "^1.11.0",
+        "graphql": "^16.3.0",
+        "highlight.js": "^11.3.1",
+        "marked": "^4.0.5",
+        "next": "12.0.4",
+        "next-themes": "^0.1.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-icons": "^4.3.1"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "^2.6.2",
+        "@graphql-codegen/fragment-matcher": "^3.2.1",
+        "@graphql-codegen/typescript": "^2.4.8",
+        "@graphql-codegen/typescript-operations": "^2.3.5",
+        "@graphql-codegen/typescript-react-apollo": "^3.2.11",
+        "@types/highlightjs": "^9.12.2",
+        "@types/marked": "^4.0.1",
+        "@types/node": "16.11.10",
+        "@types/react": "17.0.37",
+        "autoprefixer": "^10.4.2",
+        "eslint": "7",
+        "eslint-config-next": "12.0.4",
+        "eslint-config-prettier": "^8.3.0",
+        "gray-matter": "^4.0.3",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.1.2",
+        "postcss": "^8.4.8",
+        "prettier": "2.5.0",
+        "tailwindcss": "^3.0.23",
+        "typescript": "4.5.2"
+    }
 }
