--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "next-themes": "^0.1.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-icons": "^4.3.1"
+        "react-icons": "^4.3.1",
+        "react-use": "^17.3.2",
+        "sharp": "^0.30.3"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.6.2",
