--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dependencies": {
         "@apollo/client": "^3.5.10",
         "@graphql-codegen/introspection": "^2.1.1",
+        "@headlessui/react": "^1.5.0",
+        "@heroicons/react": "^1.0.6",
         "classnames": "^2.3.1",
         "dayjs": "^1.11.0",
         "graphql": "^16.3.0",
