--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@graphql-codegen/typescript": "^2.4.8",
         "@graphql-codegen/typescript-operations": "^2.3.5",
         "@graphql-codegen/typescript-react-apollo": "^3.2.11",
+        "@tailwindcss/typography": "^0.5.2",
         "@types/highlightjs": "^9.12.2",
         "@types/marked": "^4.0.1",
         "@types/node": "16.11.10",
