--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "graphql": "^16.3.0",
         "highlight.js": "^11.3.1",
         "marked": "^4.0.5",
-        "next": "12.0.4",
+        "next": "^12.1.6",
         "next-themes": "^0.1.1",
         "nextjs-progressbar": "^0.0.14",
         "react": "17.0.2",
