--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.5.10",
-        "@graphql-codegen/introspection": "^2.1.1",
+        "@graphql-codegen/introspection": "^2.2.1",
         "@headlessui/react": "^1.5.0",
         "@heroicons/react": "^1.0.6",
         "classnames": "^2.3.1",
@@ -36,12 +36,12 @@
         "sharp": "^0.30.3"
     },
     "devDependencies": {
-        "@graphql-codegen/cli": "^2.6.2",
-        "@graphql-codegen/fragment-matcher": "^3.2.1",
-        "@graphql-codegen/typescript": "^2.4.8",
-        "@graphql-codegen/typescript-operations": "^2.3.5",
-        "@graphql-codegen/typescript-react-apollo": "^3.2.11",
-        "@tailwindcss/typography": "^0.5.2",
+        "@graphql-codegen/cli": "^2.11.6",
+        "@graphql-codegen/fragment-matcher": "^3.3.1",
+        "@graphql-codegen/typescript": "^2.7.3",
+        "@graphql-codegen/typescript-operations": "^2.5.3",
+        "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+        "@tailwindcss/typography": "^0.5.4",
         "@types/highlightjs": "^9.12.2",
         "@types/marked": "^4.0.1",
         "@types/node": "16.11.10",
@@ -57,5 +57,8 @@
         "prettier": "2.5.0",
         "tailwindcss": "^3.0.23",
         "typescript": "4.5.2"
+    },
+    "resolutions": {
+        "undici": "5.5.1"
     }
 }
