build: change api url

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://mikes-blog-be.herokuapp.com/graphql
+NEXT_PUBLIC_API_URL=https://personal-blog-be-production.up.railway.app/graphql
