--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
         "graphql": "^16.3.0",
         "highlight.js": "^11.3.1",
         "marked": "^4.0.5",
-        "next": "^12.1.6",
+        "next": "^12.3.1",
         "next-themes": "^0.2.0",
         "nextjs-progressbar": "^0.0.14",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-icons": "^4.3.1",
         "react-use": "^17.3.2",
         "sharp": "^0.30.3"
