--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "@graphql-codegen/typescript": "^2.7.3",
         "@graphql-codegen/typescript-operations": "^2.5.3",
         "@graphql-codegen/typescript-react-apollo": "^3.3.3",
-        "@tailwindcss/typography": "^0.5.4",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.8",
         "@types/highlightjs": "^9.12.2",
         "@types/marked": "^4.0.1",
         "@types/node": "16.11.10",
@@ -55,7 +56,7 @@
         "lint-staged": "^12.1.2",
         "postcss": "^8.4.8",
         "prettier": "2.5.0",
-        "tailwindcss": "^3.0.23",
+        "tailwindcss": "^3.2.4",
         "typescript": "4.5.2"
     },
     "resolutions": {
