--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "graphql": "^16.3.0",
         "highlight.js": "^11.3.1",
         "marked": "^4.0.5",
-        "next": "^12.3.1",
+        "next": "^13.2.4",
         "next-themes": "^0.2.1",
         "nextjs-progressbar": "^0.0.16",
         "react": "^18.2.0",
@@ -49,7 +49,7 @@
         "@types/react": "17.0.37",
         "autoprefixer": "^10.4.2",
         "eslint": "7",
-        "eslint-config-next": "12.0.4",
+        "eslint-config-next": "^13.2.4",
         "eslint-config-prettier": "^8.3.0",
         "gray-matter": "^4.0.3",
         "husky": "^7.0.4",
