--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: http://localhost:1337/graphql
+schema: http://127.0.0.1:1337/graphql
 documents: './**/*.{ts,tsx}'
 generates:
     generated/graphql-types.tsx:
