--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
         "classnames": "^2.3.1",
         "dayjs": "^1.11.0",
         "graphql": "^16.3.0",
-        "highlight.js": "^11.3.1",
-        "marked": "^4.0.5",
         "next": "^13.2.4",
         "next-themes": "^0.2.1",
         "nextjs-progressbar": "^0.0.16",
+        "parse-numeric-range": "^1.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.3.1",
+        "react-markdown": "^8.0.7",
+        "react-syntax-highlighter": "^15.5.0",
         "react-use": "^17.4.0",
+        "remark-gfm": "^3.0.1",
         "sharp": "^0.30.3"
     },
     "devDependencies": {
@@ -42,11 +44,12 @@
         "@graphql-codegen/typescript-operations": "^2.5.3",
         "@graphql-codegen/typescript-react-apollo": "^3.3.3",
         "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/typography": "^0.5.8",
+        "@tailwindcss/typography": "^0.5.9",
         "@types/highlightjs": "^9.12.2",
         "@types/marked": "^4.0.1",
         "@types/node": "16.11.10",
-        "@types/react": "17.0.37",
+        "@types/react": "^18.2.0",
+        "@types/react-syntax-highlighter": "^15.5.6",
         "autoprefixer": "^10.4.2",
         "eslint": "7",
         "eslint-config-next": "^13.2.4",
@@ -54,9 +57,9 @@
         "gray-matter": "^4.0.3",
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
-        "postcss": "^8.4.8",
+        "postcss": "^8.4.23",
         "prettier": "2.5.0",
-        "tailwindcss": "^3.2.4",
+        "tailwindcss": "^3.3.1",
         "typescript": "4.5.2"
     },
     "resolutions": {
